增加一些经典题目

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -180,10 +180,27 @@
   - [2.123. 判断字符串是否由给定的两个字符串组合而成](#2123-判断字符串是否由给定的两个字符串组合而成)
   - [2.124. 一个字符串有多少个子序列可以组成另一个字符串](#2124-一个字符串有多少个子序列可以组成另一个字符串)
   - [2.125. 二叉树上最大（不需要经过根结点）路径和](#2125-二叉树上最大不需要经过根结点路径和)
-  - [2.126. 快速替换10亿条标题中的5万个敏感词](#2126-快速替换10亿条标题中的5万个敏感词)
-  - [2.127. 轮流取数的必胜策略](#2127-轮流取数的必胜策略)
-  - [2.128. 最大公约数（辗转相除法）](#2128-最大公约数辗转相除法)
-  - [2.129. 最小公倍数](#2129-最小公倍数)
+  - [2.126. 求将字符串切分为回文字串需要的最少切分次数](#2126-求将字符串切分为回文字串需要的最少切分次数)
+  - [2.127. 二维坐标系下一条线上最多多少个点](#2127-二维坐标系下一条线上最多多少个点)
+  - [2.128. 股票交易求最大收益，最多可以进行k次交易](#2128-股票交易求最大收益最多可以进行k次交易)
+  - [2.129. 在字符串前插入一些字符使得字符串为回文字符串、](#2129-在字符串前插入一些字符使得字符串为回文字符串)
+  - [2.130. 计算从1到n中含有数字1的数的个数](#2130-计算从1到n中含有数字1的数的个数)
+  - [2.131. 移动窗口求每个窗口元素最大值](#2131-移动窗口求每个窗口元素最大值)
+  - [2.132. 数字转换为英文单词组合](#2132-数字转换为英文单词组合)
+  - [2.133. 二叉树的序列化和反序列化](#2133-二叉树的序列化和反序列化)
+  - [2.134. 移除字符串中的重复字符，并使得最终结果字典序最小](#2134-移除字符串中的重复字符并使得最终结果字典序最小)
+  - [2.135. 信封俄罗斯套娃](#2135-信封俄罗斯套娃)
+  - [2.136. 小矩阵是否能完整拼接为大矩阵](#2136-小矩阵是否能完整拼接为大矩阵)
+  - [2.137. 将数组划分为m份，使得每份和的最大值最小](#2137-将数组划分为m份使得每份和的最大值最小)
+  - [2.138. 在1到n中寻找字典序第k小的数](#2138-在1到n中寻找字典序第k小的数)
+  - [2.139. 滑动窗口中间值](#2139-滑动窗口中间值)
+  - [2.140. 多个有序数组，每个数组挑选至少一个数，求能够组成的最小的数组范围](#2140-多个有序数组每个数组挑选至少一个数求能够组成的最小的数组范围)
+  - [2.141. 点游戏](#2141-点游戏)
+  - [2.142. 数组中寻找三个长为k的不重叠子数组，使得其和最大](#2142-数组中寻找三个长为k的不重叠子数组使得其和最大)
+  - [2.143. 快速替换10亿条标题中的5万个敏感词](#2143-快速替换10亿条标题中的5万个敏感词)
+  - [2.144. 轮流取数的必胜策略](#2144-轮流取数的必胜策略)
+  - [2.145. 最大公约数（辗转相除法）](#2145-最大公约数辗转相除法)
+  - [2.146. 最小公倍数](#2146-最小公倍数)
 
 <!-- /TOC -->
 
@@ -4702,7 +4719,568 @@ def maxPathSum(self, root):
     return path_sum(root, -sys.maxsize)[1]
 ```
 
-### 2.126. 快速替换10亿条标题中的5万个敏感词
+### 2.126. 求将字符串切分为回文字串需要的最少切分次数
+
+[Leetcode 132. Palindrome Partitioning II][leetcode_132]
+
+```python
+def minCut(self, s):
+    """
+    :type s: str
+    :rtype: int
+    """
+    length = len(s)
+    cuts = [0] * length
+    palindrome = [[False] * length for i in range(length)]
+    for i in range(length):
+        current = i
+        for j in range(i + 1):
+            if s[i] == s[j] and (i - j < 2 or palindrome[j + 1][i - 1]):
+                palindrome[j][i] = True
+                current = 0 if j == 0 else min(current, cuts[j - 1] + 1)
+        cuts[i] = current
+    return cuts[length - 1]
+```
+
+### 2.127. 二维坐标系下一条线上最多多少个点
+
+[Leetcode 149. Max Points on a Line][leetcode_149]
+
+```python
+def maxPoints(self, points):
+    """
+    :type points: List[Point]
+    :rtype: int
+    """
+    def transform(a, b):
+        def gcd(a, b):
+            while b:
+                a, b = b, a % b
+            return a
+
+        c = gcd(a, b)
+        a /= c
+        b /= c
+        return (a << 32) | b
+
+    if len(points) < 3:
+        return len(points)
+    result = 0
+    for i, current in enumerate(points):
+        same_point = 1
+        same_vertical_line = 0
+        memory = {}
+        for j in range(i + 1, len(points)):
+            point = points[j]
+            if current.x == point.x and current.y == point.y:
+                same_point += 1
+            elif current.x == point.x:
+                same_vertical_line += 1
+            else:
+                key = transform(point.y - current.y, point.x - current.x)
+                if key not in memory:
+                    memory[key] = 0
+                memory[key] += 1
+        result = max(result, same_vertical_line + same_point)
+        if memory:
+            result = max(result, max(memory.values()) + same_point)
+    return result
+```
+
+### 2.128. 股票交易求最大收益，最多可以进行k次交易
+
+[Leetcode 188. Best Time to Buy and Sell Stock IV][leetcode_188]
+
+```python
+def maxProfit(self, k, prices):
+    """
+    :type k: int
+    :type prices: List[int]
+    :rtype: int
+    """
+    if not prices:
+        return 0
+    if k >= len(prices) // 2:
+        result = 0
+        for i in range(1, len(prices)):
+            if prices[i] > prices[i - 1]:
+                result += prices[i] - prices[i - 1]
+        return result
+    dp = [0] * len(prices)
+    for time in range(k):
+        current = dp[0] - prices[0]
+        for i in range(1, len(prices)):
+            current = max(current, dp[i] - prices[i])
+            dp[i] = max(dp[i - 1], prices[i] + current)
+    return max(dp)
+```
+
+### 2.129. 在字符串前插入一些字符使得字符串为回文字符串、
+
+[Leetcode 214. Shortest Palindrome][leetcode_214]
+
+```python
+def shortestPalindrome(self, s):
+    """
+    :type s: str
+    :rtype: str
+    """
+    reverse = s[::-1]
+    for i in range(len(s) + 1):
+        if s.startswith(reverse[i:]):
+            return reverse[:i] + s
+```
+
+### 2.130. 计算从1到n中含有数字1的数的个数
+
+[Leetcode 233. Number of Digit One][leetcode_233]
+
+```python
+def countDigitOne(self, n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    result = 0
+    times = 1
+    while times <= n:
+        a = n // times
+        b = n % times
+        if a % 10 == 0:
+            result += a // 10 * times
+        elif a % 10 == 1:
+            result += a // 10 * times + b + 1
+        else:
+            result += (a // 10 + 1) * times
+        times *= 10
+    return result
+```
+
+### 2.131. 移动窗口求每个窗口元素最大值
+
+[Leetcode 239. Sliding Window Maximum][leetcode_239]
+
+```python
+def maxSlidingWindow(self, nums, k):
+    """
+    :type nums: List[int]
+    :type k: int
+    :rtype: List[int]
+    """
+    que = collections.deque()
+    result = []
+    for i, num in enumerate(nums):
+        if que and que[0] == i - k:
+            que.popleft()
+        while que and nums[que[-1]] < num:
+            que.pop()
+        que.append(i)
+        if i + 1 >= k:
+            result.append(nums[que[0]])
+    return result
+```
+
+### 2.132. 数字转换为英文单词组合
+
+[Leetcode 273. Integer to English Words][leetcode_273]
+
+```python
+def numberToWords(self, num):
+    """
+    :type num: int
+    :rtype: str
+    """
+    def convert(num):
+        LESS_THAN_20 = ["", "One", "Two", "Three", "Four", "Five", "Six", "Seven", "Eight", "Nine", "Ten", "Eleven",
+                        "Twelve", "Thirteen", "Fourteen", "Fifteen", "Sixteen", "Seventeen", "Eighteen", "Nineteen"]
+        TENS = ["", "Ten", "Twenty", "Thirty", "Forty", "Fifty", "Sixty", "Seventy", "Eighty", "Ninety"]
+        if num == 0:
+            return ''
+        if num < 20:
+            return LESS_THAN_20[num] + ' '
+        if num < 100:
+            return TENS[num // 10] + ' ' + convert(num % 10)
+        return LESS_THAN_20[num // 100] + ' Hundred ' + convert(num % 100)
+
+    THOUSANDS = ["", "Thousand", "Million", "Billion"]
+    if num == 0:
+        return 'Zero'
+    i = 0
+    result = ''
+    while num:
+        slice = num % 1000
+        if slice:
+            result = convert(slice) + THOUSANDS[i] + ' ' + result
+        num //= 1000
+        i += 1
+    return result.strip()
+```
+
+### 2.133. 二叉树的序列化和反序列化
+
+[Leetcode 273. Integer to English Words][leetcode_273]
+
+```python
+class Codec:
+
+    def serialize(self, root):
+        """Encodes a tree to a single string.
+
+        :type root: TreeNode
+        :rtype: str
+        """
+
+        def serial(node, result):
+            if node:
+                result.append(str(node.val))
+                serial(node.left, result)
+                serial(node.right, result)
+            else:
+                result.append('#')
+
+        result = []
+        serial(root, result)
+        return ' '.join(result)
+
+    def deserialize(self, data):
+        """Decodes your encoded data to tree.
+
+        :type data: str
+        :rtype: TreeNode
+        """
+
+        def deserail(que):
+            value = que.popleft()
+            if value == '#':
+                return None
+            node = TreeNode(int(value))
+            node.left = deserail(que)
+            node.right = deserail(que)
+            return node
+
+        que = collections.deque(data.split())
+        return deserail(que)
+```
+
+### 2.134. 移除字符串中的重复字符，并使得最终结果字典序最小
+
+[Leetcode 316. Remove Duplicate Letters][leetcode_316]
+
+```python
+def removeDuplicateLetters(self, s):
+    """
+    :type s: str
+    :rtype: str
+    """
+    stack = []
+    counts = [0] * 128
+    for letter in s:
+        counts[ord(letter)] += 1
+    exists = [False] * 128
+    for letter in s:
+        letter_in_int = ord(letter)
+        counts[letter_in_int] -= 1
+        if exists[letter_in_int]:
+            continue
+        while stack and letter_in_int < stack[-1] and counts[stack[-1]] > 0:
+            temp = stack.pop()
+            exists[temp] = False
+        stack.append(letter_in_int)
+        exists[letter_in_int] = True
+    return ''.join(map(chr, stack))
+```
+
+### 2.135. 信封俄罗斯套娃
+
+[Leetcode 354. Russian Doll Envelopes][leetcode_354]
+
+```python
+def maxEnvelopes(self, envelopes):
+    """
+    :type envelopes: List[List[int]]
+    :rtype: int
+    """
+    envelopes.sort(key=lambda x: (x[0], -x[1]))
+    dp = [0] * len(envelopes)
+    current_length = 0
+    for envelope in envelopes:
+        low = 0
+        high = current_length
+        value = envelope[1]
+        while low < high:
+            mid = (low + high) // 2
+            if dp[mid] == value:
+                low = mid
+                break
+            if dp[mid] < value:
+                low = mid + 1
+            else:
+                high = mid
+        dp[low] = value
+        if low == current_length:
+            current_length += 1
+    return current_length
+```
+
+### 2.136. 小矩阵是否能完整拼接为大矩阵
+
+[Leetcode 391. Perfect Rectangle][leetcode_391]
+
+```python
+def isRectangleCover(self, rectangles):
+    """
+    :type rectangles: List[List[int]]
+    :rtype: bool
+    """
+    x1 = sys.maxsize
+    y1 = sys.maxsize
+    x2 = -sys.maxsize
+    y2 = -sys.maxsize
+    got = set()
+    sum_up = 0
+    for rectangle in rectangles:
+        a1 = rectangle[0]
+        b1 = rectangle[1]
+        a2 = rectangle[2]
+        b2 = rectangle[3]
+        x1 = min(x1, a1)
+        y1 = min(y1, b1)
+        x2 = max(x2, a2)
+        y2 = max(y2, b2)
+        sum_up += (a2 - a1) * (b2 - b1)
+        for i in [0, 2]:
+            for j in [1, 3]:
+                key = str(rectangle[i]) + ' ' + str(rectangle[j])
+                if key in got:
+                    got.remove(key)
+                else:
+                    got.add(key)
+    return len(got) == 4 \
+            and (str(x1) + ' ' + str(y1)) in got \
+            and (str(x1) + ' ' + str(y2)) in got \
+            and (str(x2) + ' ' + str(y1)) in got \
+            and (str(x2) + ' ' + str(y2)) in got \
+            and sum_up == (x2 - x1) * (y2 - y1)
+```
+
+### 2.137. 将数组划分为m份，使得每份和的最大值最小
+
+[Leetcode 410. Split Array Largest Sum][leetcode_410]
+
+```python
+def splitArray(self, nums, m):
+    """
+    :type nums: List[int]
+    :type m: int
+    :rtype: int
+    """
+    def cut(nums, mid, m):
+        count = 1
+        current_sum = 0
+        for num in nums:
+            current_sum += num
+            if current_sum > mid:
+                count += 1
+                current_sum = num
+                if count > m:
+                    return False
+        return True
+
+    low = max(nums)
+    high = sum(nums)
+    while low <= high:
+        mid = (low + high) // 2
+        cuts = cut(nums, mid, m)
+        if cuts:
+            high = mid - 1
+        else:
+            low = mid + 1
+    return low
+```
+
+### 2.138. 在1到n中寻找字典序第k小的数
+
+[Leetcode 440. K-th Smallest in Lexicographical Order][leetcode_440]
+
+```python
+def findKthNumber(self, n, k):
+    """
+    :type n: int
+    :type k: int
+    :rtype: int
+    """
+    current = 1
+    k -= 1
+    while k > 0:
+        steps = 0
+        start = current
+        end = start + 1
+        while start <= n:
+            steps += min(n + 1, end) - start
+            start *= 10
+            end *= 10
+        if steps <= k:
+            current += 1
+            k -= steps
+        else:
+            current *= 10
+            k -= 1
+    return current
+```
+
+### 2.139. 滑动窗口中间值
+
+[Leetcode 480. Sliding Window Median][leetcode_480]
+
+```python
+def medianSlidingWindow(self, nums, k):
+    """
+    :type nums: List[int]
+    :type k: int
+    :rtype: List[float]
+    """
+    min_heap = []
+    max_heap = []
+    result = []
+
+    for i, num in enumerate(nums[:k]):
+        heapq.heappush(max_heap, (-num, i))
+    for _ in range(k - k // 2):
+        heapq.heappush(min_heap, (-max_heap[0][0], max_heap[0][1]))
+        heapq.heappop(max_heap)
+    for i in range(k, len(nums)):
+        num = nums[i]
+        result.append(min_heap[0][0] / 1.0 if k % 2 else (min_heap[0][0] - max_heap[0][0]) / 2.0)
+        if num >= min_heap[0][0]:
+            heapq.heappush(min_heap, (num, i))
+            if nums[i - k] <= min_heap[0][0]:
+                heapq.heappush(max_heap, (-min_heap[0][0], min_heap[0][1]))
+                heapq.heappop(min_heap)
+        else:
+            heapq.heappush(max_heap, (-num, i))
+            if nums[i - k] >= min_heap[0][0]:
+                heapq.heappush(min_heap, (-max_heap[0][0], max_heap[0][1]))
+                heapq.heappop(max_heap)
+        while max_heap and max_heap[0][1] <= i - k:
+            heapq.heappop(max_heap)
+        while min_heap and min_heap[0][1] <= i - k:
+            heapq.heappop(min_heap)
+    result.append(min_heap[0][0] / 1.0 if k % 2 else (min_heap[0][0] - max_heap[0][0]) / 2.0)
+    return result
+```
+
+### 2.140. 多个有序数组，每个数组挑选至少一个数，求能够组成的最小的数组范围
+
+[Leetcode 632. Smallest Range][leetcode_632]
+
+```python
+def smallestRange(self, nums):
+    """
+    :type nums: List[List[int]]
+    :rtype: List[int]
+    """
+    heap = []
+    end = -sys.maxsize
+    for index, num in enumerate(nums):
+        end = max(end, num[0])
+        heapq.heappush(heap, (num[0], index, 0))
+    start = heap[0][0]
+    temp_end = end
+    while len(heap) == len(nums):
+        current = heapq.heappop(heap)
+        if current[2] + 1 < len(nums[current[1]]):
+            temp_end = max(temp_end, nums[current[1]][current[2] + 1])
+            heapq.heappush(heap, (nums[current[1]][current[2] + 1], current[1], current[2] + 1))
+            if temp_end - heap[0][0] < end - start:
+                start = heap[0][0]
+                end = temp_end
+    return [start, end]
+```
+
+### 2.141. 点游戏
+
+[Leetcode 679. 24 Game][leetcode_679]
+
+```python
+def judgePoint24(self, nums):
+    """
+    :type nums: List[int]
+    :rtype: bool
+    """
+    EPS = 0.001
+
+    def back_trace(nums):
+        if len(nums) == 1:
+            return abs(nums[0] - 24) < EPS
+        for i, a in enumerate(nums):
+            for j, b in enumerate(nums[:i]):
+                candidates = [a + b, a - b, b - a, a * b]
+                if abs(a) > EPS:
+                    candidates.append(b / a)
+                if abs(b) > EPS:
+                    candidates.append(a / b)
+                del nums[i]
+                del nums[j]
+                for candidate in candidates:
+                    nums.append(candidate)
+                    if back_trace(nums):
+                        return True
+                    nums.pop()
+                nums.insert(j, b)
+                nums.insert(i, a)
+        return False
+
+    return back_trace(nums)
+```
+
+### 2.142. 数组中寻找三个长为k的不重叠子数组，使得其和最大
+
+[Leetcode 689. Maximum Sum of 3 Non-Overlapping Subarrays][leetcode_689]
+
+```python
+def maxSumOfThreeSubarrays(self, nums, k):
+    """
+    :type nums: List[int]
+    :type k: int
+    :rtype: List[int]
+    """
+    length = len(nums)
+    left_sums = []
+    temp = 0
+    left_sums.append(temp)
+    for num in nums:
+        temp += num
+        left_sums.append(temp)
+    index_left = [0] * length
+    current_max = 0
+    for i in range(k - 1, length):
+        if left_sums[i + 1] - left_sums[i + 1 - k] > current_max:
+            index_left[i] = i + 1 - k
+            current_max = left_sums[i + 1] - left_sums[i + 1 - k]
+        else:
+            index_left[i] = index_left[i - 1]
+    index_right = [0] * length
+    current_max = 0
+    for i in range(length - k, -1, -1):
+        if left_sums[i + k] - left_sums[i] >= current_max:
+            index_right[i] = i
+            current_max = left_sums[i + k] - left_sums[i]
+        else:
+            index_right[i] = index_right[i + 1]
+    the_max = 0
+    result = [0] * 3
+    for i in range(k, length - 2 * k + 1):
+        left = index_left[i - 1]
+        right = index_right[i + k]
+        current_max = left_sums[left + k] - left_sums[left] + left_sums[i + k] - left_sums[i] + left_sums[
+            right + k] - left_sums[right]
+        if current_max > the_max:
+            result = [left, i, right]
+            the_max = current_max
+    return result
+```
+
+### 2.143. 快速替换10亿条标题中的5万个敏感词
 
 Aho-Corasick算法（AC自动机）：
 
@@ -4712,13 +5290,13 @@ Aho-Corasick算法（AC自动机）：
 
 参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
 
-### 2.127. 轮流取数的必胜策略
+### 2.144. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
 
-### 2.128. 最大公约数（辗转相除法）
+### 2.145. 最大公约数（辗转相除法）
 
 ```python
 def gcd(a, b):
@@ -4727,7 +5305,7 @@ def gcd(a, b):
     return a
 ```
 
-### 2.129. 最小公倍数
+### 2.146. 最小公倍数
 
 `(a * b)/gcd(a, b)`
 
@@ -4968,3 +5546,33 @@ def gcd(a, b):
 [leetcode_115]: https://leetcode.com/problems/distinct-subsequences/description/
 
 [leetcode_124]: https://leetcode.com/problems/binary-tree-maximum-path-sum/description/
+
+[leetcode_149]: https://leetcode.com/problems/max-points-on-a-line/description/
+
+[leetcode_188]: https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iv/description/
+
+[leetcode_214]: https://leetcode.com/problems/shortest-palindrome/description/
+
+[leetcode_233]: https://leetcode.com/problems/number-of-digit-one/description/
+
+[leetcode_239]: https://leetcode.com/problems/sliding-window-maximum/description/
+
+[leetcode_273]: https://leetcode.com/problems/integer-to-english-words/description/
+
+[leetcode_316]: https://leetcode.com/problems/remove-duplicate-letters/description/
+
+[leetcode_354]: https://leetcode.com/problems/russian-doll-envelopes/description/
+
+[leetcode_391]: https://leetcode.com/problems/perfect-rectangle/description/
+
+[leetcode_410]: https://leetcode.com/problems/split-array-largest-sum/description/
+
+[leetcode_440]: https://leetcode.com/problems/k-th-smallest-in-lexicographical-order/description/
+
+[leetcode_480]: https://leetcode.com/problems/sliding-window-median/description/
+
+[leetcode_632]: https://leetcode.com/problems/smallest-range/description/
+
+[leetcode_679]: https://leetcode.com/problems/24-game/description/
+
+[leetcode_689]: https://leetcode.com/problems/maximum-sum-of-3-non-overlapping-subarrays/description/
