修复一些链接错误

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -1626,6 +1626,8 @@ def majorityElement(nums):
 
 ### 2.9. 找出长为n的数组中出现次数大于⌊ n/k ⌋的元素
 
+[Leetcode 229. Majority Element II][leetcode_229]
+
 ```python
 def majority_element(nums, k):
     counters = {}
@@ -3474,7 +3476,7 @@ def getRow(self, rowIndex):
 
 ### 2.84. 克隆图
 
-[Leetcode 119. Pascal's Triangle II][leetcode_119]
+[Leetcode 133. Clone Graph][leetcode_133]
 
 ```python
 def cloneGraph(self, node):
@@ -4385,7 +4387,7 @@ def findMedianSortedArrays(self, nums1, nums2):
 
 ### 2.115. 带有`.`和`*`的正则表达式匹配
 
-[Leetcode 4. Median of Two Sorted Arrays][leetcode_4]
+[Leetcode 10. Regular Expression Matching][leetcode_10]
 
 ```python
 def isMatch(self, s, p):
@@ -5467,7 +5469,7 @@ def gcd(a, b):
 
 [leetcode_142]: https://leetcode.com/problems/linked-list-cycle-ii/description/
 
-[leetcode_152]: https://leetcode.com/submissions/detail/95525167/
+[leetcode_152]: https://leetcode.com/problems/maximum-product-subarray/description/
 
 [leetcode_153]: https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/
 
@@ -5483,7 +5485,7 @@ def gcd(a, b):
 
 [leetcode_230]: https://leetcode.com/problems/kth-smallest-element-in-a-bst/description/
 
-[leetcode_307]: https://leetcode.com/submissions/detail/97819470/
+[leetcode_307]: https://leetcode.com/problems/range-sum-query-mutable/description/
 
 [leetcode_421]: https://leetcode.com/problems/maximum-xor-of-two-numbers-in-an-array/description/
 
@@ -5576,3 +5578,15 @@ def gcd(a, b):
 [leetcode_679]: https://leetcode.com/problems/24-game/description/
 
 [leetcode_689]: https://leetcode.com/problems/maximum-sum-of-3-non-overlapping-subarrays/description/
+
+[leetcode_229]: https://leetcode.com/problems/majority-element-ii/description/
+
+[leetcode_133]: https://leetcode.com/problems/clone-graph/description/
+
+[leetcode_464]: https://leetcode.com/problems/can-i-win/description/
+
+[leetcode_10]: https://leetcode.com/problems/regular-expression-matching/description/
+
+[leetcode_84]: https://leetcode.com/problems/largest-rectangle-in-histogram/description/
+
+[leetcode_132]: https://leetcode.com/problems/palindrome-partitioning-ii/description/
