更新最小公倍数

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -5309,7 +5309,10 @@ def gcd(a, b):
 
 ### 2.146. 最小公倍数
 
-`(a * b)/gcd(a, b)`
+```python
+def lcm(a, b):
+    return a * b // gcd(a, b)
+```
 
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
